# demo-vis

./: .gitignore  README.md  main.py
data/: flat_server_classes.json
rs/demo_packet_dumper/: .gitignore  Cargo.toml  voteiddemo.dem
rs/demo_packet_dumper/src/: main.rs
src/gsd/: load.py  player.py
src/pivot/: dtypes.py  extractors.py  v2.py
src/visualise/: movement.py
tests/: vis.py
