[package]
name = "demo_packet_dumper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitbuffer = "0.10.9"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.10.1"
indicatif = "0.17.8"
main_error = "0.1.2"
serde = "1.0.193"
serde_json = "1.0.108"
tf-demo-parser = { git = "https://github.com/MegaAntiCheat/parser" }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
